# yumex-dnf-old

./: .gitignore  .pre-commit-config.yaml  .pylintrc  ChangeLog  Makefile  README.md  meson.build  setup.py  yumex-dnf.spec  yumex-nextgen.spec
.tx/: config
data/: meson.build
data/ui/: errordialog.ui  preferences.ui  progresssplash.ui  transactionresult.ui  yumex.ui
dbus/: Makefile  dbus_status.py  dk.yumex.StatusIcon.service
docs/: Makefile  conf.py  faq.rst  index.rst  main.rst
gfx/: Makefile  meson.build
misc/: Makefile  meson.build  yumex-dnf-autostart.desktop  yumex-dnf-local.desktop.in  yumex-dnf-updater.desktop  yumex-dnf.appdata.xml.in  yumex-dnf.desktop.in  yumex-nextgen-autostart.desktop  yumex-nextgen-local.desktop.in  yumex-nextgen.desktop  yumex-nextgen.desktop.in
misc/scss/: Dracula.scss  One-Dark.scss  System-Dark.scss  System-Light.scss  _base.scss  _colors.scss  _palette.scss  _system_base.scss
misc/themes/: Dracula.theme  Material-Green.theme  One-Dark.theme  System-Dark.theme  System-Light.theme  yumex.theme
po/: LINGUAS  Makefile  POTFILES.in  ar.po  bg.po  bn_IN.po  ca.po  cmn.po  cs.po  da.mo  da.po  de.po  el.po  en_BR.po  es.po  es_ES.po  fa.po  fr.po  gu.po  he_IL.po  hu.po  id.po  it.po  ja.po  ko.po  ky.po  meson.build  nl.po  pl.po  pt.po  pt_BR.po  ru.po  ru_RU.po  sk.po  sr.po  sr@latin.po  sv.po  tr_TR.po  uk.po  yumex-dnf.pot  (+3 more)
src/: Makefile  dbus_status.py  gtk-style.css  main.py  meson.build  new-main.py  shortcuts.ui  update.py  yumex-new.ui  yumex.ui
src/yumex/: Makefile  __init__.py  backend.py  config.py  const.py  dnf_backend.py  misc.py  status.py  test_backend.py  updater.py  widgets.py  yum_backend.py
src/yumex/backend/: __init__.py  dnf.py
src/yumex/base/: __init__.py  baseyumex.py
src/yumex/common/: __init__.py  config.py  const.py
src/yumex/gui/: __init__.py  dialogs.py  errordialog.py  new_widgets.py  preferences.py  progresssplash.py  transactionresult.py  views.py  widgets.py
src/yumex/gui/dialogs/: __init__.py  aboutdialog.py  errordialog.py  preferences.py  progresssplash.py  transactionresult.py
src/yumex/gui/views/: __init__.py  groupview.py  historypackageview.py  historyview.py  packagequeue.py  packageview.py  queueview.py  repoview.py  selectionview.py
src/yumex/gui/widgets/: __init__.py  content.py  filters.py  mainnenu.py  packageinfo.py  progress.py  searchbar.py
src/yumex/gui/window/: __init__.py  basewindow.py
src/yumex/updater/: __init__.py
tools/: git2cl.py  makerepo.sh  repo-build.py  syncrepo.sh  update-repo.sh  update-translations.sh
